package TGConstant;

public class Constant {
    public static final String JDBC_DRIVER = "com.mysql.cj.jdbc.Driver";
    public static final String DB_URL = "jdbc:mysql://localhost:3306/mysql";
    public static final String USER = "root";
    public static final String PASS = "Mortuum48";

    public static final String TOKEN = "2018829476:AAFcvR0sF_Y63CdZ3r9frf97hqIxvZLzNNs";
    public static final String USERNAME ="DiplomJavaStudy_Bot";

    public static final String GREETING_MESSAGE = "Вас приветствует телеграм-бот для оценки тяжести состояния пациента";
    public static final String START_DISEASES_MESSAGE = "Мы подскажем, что делать в случае вашей болезни: " ;
    public static final String HELP_MESSAGE = "Бог поможет";

    public static final String START = "/start";
    public static final String START_PLANNING = "Начать";
    public static final String HELP = "/help";
}
