@startuml

title __TELEGRAM_BOT's Class Diagram__\n

  namespace  {
    class Main {
    }
  }
  

  namespace  {
    namespace rog {
      class prog.Constant {
      }
    }
  }
  

  namespace  {
    namespace rog {
      class prog.DataBaseConnection {
      }
    }
  }
  

  namespace  {
    namespace rog {
      interface prog.Math {
      }
    }
  }
  

  namespace  {
    namespace rog {
      class prog.MathAddStrategy {
      }
    }
  }
  

  namespace  {
    namespace rog {
      class prog.MathMultiplyStrategy {
      }
    }
  }
  

  namespace  {
    namespace rog {
      class prog.MathShareStrategy {
      }
    }
  }
  

  namespace  {
    namespace rog {
      class prog.SendMessageService {
      }
    }
  }
  

  namespace  {
    namespace rog {
      class prog.TGButtonsLogic {
      }
    }
  }
  

  namespace  {
    namespace rog {
      class prog.TGJavaBotController {
      }
    }
  }
  

  namespace  {
    namespace rog {
      class prog.TGOpenFile {
      }
    }
  }
  

  prog.MathAddStrategy .up.|> prog.Math
  prog.MathMultiplyStrategy .up.|> prog.Math
  prog.MathShareStrategy .up.|> prog.Math
  prog.SendMessageService o-- prog.TGButtonsLogic : tgButtonsLogic
  prog.TGJavaBotController -up-|> org.telegram.telegrambots.bots.TelegramLongPollingBot
  prog.TGJavaBotController o-- prog.Math : math
  prog.TGJavaBotController o-- prog.SendMessageService : sendMessageService
  prog.TGJavaBotController o-- prog.TGOpenFile : tgOpenFile
  prog.TGOpenFile -up-|> javax.swing.JFrame


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
